Fixes for links and such having too much spacing.

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -248,6 +248,8 @@ div.unpublished {
 
 .node-type-link {
   margin-bottom: 0;
+  padding-bottom: 0;
+  padding-top: 0;
   }
 
 div.terms {
