--- a/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
@@ -133,6 +133,10 @@ img {
   padding: 0 15px;
   }
 
+#content-main .views-row {
+	margin: 0;
+}
+  
 .sidebar {
   padding-top: 30px;
   }
